fix mobile spacing

--- a/Crawlables/crawl.css
+++ b/Crawlables/crawl.css
@@ -90,6 +90,7 @@ html, body {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: fit-content;
 }
 
 .legend {
