--- a/Trekkables/bespoke_trek.css
+++ b/Trekkables/bespoke_trek.css
@@ -46,6 +46,7 @@ html, body {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: fit-content
 }
 
 .legend {
